force-app/main/default/objects/Competitor_Mention__c/Competitor_Mention__c.object-meta.xml
<CustomObject>
    <label>Competitor Mention</label>
    <pluralLabel>Competitor Mentions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CMP-{00000}</displayFormat>
    </nameField>
</CustomObject>