force-app/main/default/objects/Competitor_Mention__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Confluent</fullName>
                </value>
                <value>
                    <fullName>Databricks</fullName>
                </value>
                <value>
                    <fullName>Snowflake</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>