force-app/main/default/objects/Competitor_Mention__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>LongTextArea</type>
    <length>2048</length>
</CustomField>