force-app/main/default/objects/Competitor_Mention__c/fields/Threat_Level__c.field-meta.xml
<CustomField>
    <fullName>Threat_Level__c</fullName>
    <label>Threat Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>